[gd_scene load_steps=4 format=3 uid="uid://clwygh7oxs6m7"]

[ext_resource type="PackedScene" uid="uid://c1bhi5m51nhgu" path="res://scenes/start_screen.tscn" id="1_h2yge"]
[ext_resource type="Script" uid="uid://jmklyvm3klyd" path="res://scenes/main.gd" id="1_jyhfs"]
[ext_resource type="PackedScene" uid="uid://c52fdsmd7dpwa" path="res://scenes/results_screen.tscn" id="3_sugp2"]

[node name="Main" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_jyhfs")

[node name="StartScreen" parent="." instance=ExtResource("1_h2yge")]
layout_mode = 1

[node name="ResultsScreen" parent="." instance=ExtResource("3_sugp2")]
visible = false
layout_mode = 1

[connection signal="start_button_pressed" from="StartScreen" to="." method="_on_start_screen_start_button_pressed"]
